[gd_scene load_steps=13 format=3 uid="uid://d4axcaigntahs"]

[ext_resource type="Script" uid="uid://3r1iiqm6f5rc" path="res://content/other/bomb.gd" id="1_ukdw2"]
[ext_resource type="Texture2D" uid="uid://c43ocwt4gt5wy" path="res://assets/other/all_bomb_set.png" id="3_1ff8c"]
[ext_resource type="Texture2D" uid="uid://dyrkgm6wt01e1" path="res://assets/tiles/opaque_warning_tile.png" id="3_o2vj0"]
[ext_resource type="Texture2D" uid="uid://dofboosxtvhm3" path="res://assets/tiles/solid_warning_tile.png" id="4_fpio6"]
[ext_resource type="PackedScene" uid="uid://d3wrw0bctjrmx" path="res://content/other/ghost_bomb.tscn" id="5_1ff8c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fpio6"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ff8c"]
size = Vector2(16, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ff8c"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fpio6"]
texture = ExtResource("3_o2vj0")
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_1ff8c"]
sources/0 = SubResource("TileSetAtlasSource_fpio6")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1ff8c"]
texture = ExtResource("4_fpio6")
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_7o66m"]
sources/0 = SubResource("TileSetAtlasSource_1ff8c")

[node name="Bomb" type="RigidBody2D"]
can_sleep = false
lock_rotation = true
script = ExtResource("1_ukdw2")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 9)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_fpio6")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_1ff8c")

[node name="GhostBomb" parent="." instance=ExtResource("5_1ff8c")]
z_index = 12

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 7.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1ff8c")
metadata/_edit_use_anchors_ = true

[node name="BombSprite" type="Sprite2D" parent="."]
z_index = 12
texture = ExtResource("3_1ff8c")
region_enabled = true
region_rect = Rect2(32, 32, 16, 16)

[node name="WarningLayers" type="Node2D" parent="."]

[node name="OpaqueWarningLayer" type="TileMapLayer" parent="WarningLayers"]
z_index = 11
use_parent_material = true
tile_set = SubResource("TileSet_1ff8c")

[node name="SolidWarningLayer" type="TileMapLayer" parent="WarningLayers"]
z_index = 11
use_parent_material = true
tile_set = SubResource("TileSet_7o66m")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="gui_input" from="Panel" to="." method="_on_panel_gui_input"]
